<resources>
    <string name="app_name">TODO</string>

    <!-- Bottom Menu -->
    <string name="tasks">Tasks</string>
    <string name="calendar">Calendar</string>
    <string name="setting">Setting</string>

    <!-- Category Menu -->
    <string name="category_management">Category Management</string>
    <string name="task_search">Task Search</string>
    <string name="create_new">➕ Create New</string>
    <string name="create_new_category">Create new category</string>
    <string name="input_here">Input here.</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="selected_color">Selected Color</string>
    <string name="edit_menu">Edit Menu</string>
    <string name="delete">Delete</string>
    <string name="category_ask_delete">Are you sure to delete the category?</string>
</resources>
