<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_radius_10dp"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_category"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_category"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_light_gray_radius_10dp"
            android:gravity="top"
            android:hint="@string/input_here"
            android:maxLength="50"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_text_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            app:layout_constraintBottom_toBottomOf="@id/tv_text_max"
            app:layout_constraintEnd_toStartOf="@id/tv_text_max"
            app:layout_constraintTop_toTopOf="@id/tv_text_max" />

        <TextView
            android:id="@+id/tv_text_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="/50"
            app:layout_constraintBottom_toBottomOf="@id/et_category"
            app:layout_constraintEnd_toEndOf="@id/et_category" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ripple_unbounded"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/btn_save"
            app:layout_constraintTop_toTopOf="@id/btn_save" />

        <TextView
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/ripple_unbounded"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="5dp"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/et_category"
            app:layout_constraintTop_toBottomOf="@id/et_category" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
